# pong-gl

./: .gitignore  CMakeLists.txt  README.md  buffer.hpp  debug.hpp  ft2wrap.hpp  handle.hpp  image.hpp  main.cpp  polygon.hpp  pong.hpp  shader.hpp  shapes.hpp  string.hpp  texture.hpp  traits.hpp  window.hpp
shaders/character/: character.frag  character.vert
shaders/identity/: identity.frag  identity.vert
